2006-05-26  Derek Atkins  <derek@ihtfp.com>

	* src/engine/gnc-engine.c: load the qsf backend from the right place.

2006-05-26   Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Simplify calling
	the aqhbci setup wizard for aqbanking>=1.9.1 because we don't need
	to select an aqbanking backend beforehand.

2006-05-25  Chris Shoemaker <chris.shoemaker@cox.net>

	* configure.in: REactivate --enable-sql by reverting part of r14175 
	see bug#332251.

2006-05-24  Joshua Sled  <jsled@asynchronous.org>

	* src/register/ledger-core/split-register-load.c (skip_cb):
	Disable skipping hidden accounts for the purposes of quickfill
	completion population.  Less-than-ideal-but-simple fix for
	Bug#340885.

2006-05-24  Derek Atkins  <derek@ihtfp.com>

	* src/report/report-gnome/window-report.c:
	  Re-enable window sensitivity if the report fails.  Fixes #341610

2006-05-24  Christian Stimming <stimming@tuhh.de>

	* configure.in: Deactivate --enable-sql because PostgreSQL backend
	is still broken and we can't fix it before 2.0.0; bug#332251.

r14181 | chris | 2006-05-24 18:57:43 -0400 (Wed, 24 May 2006) | 3 lines

   M /gnucash/branches/misc-backend/lib/libqof/qof/guid.c

   The postgres backend depends on the value of the null guid, so revert it
   to its 1.8 value.

r14180 | chris | 2006-05-24 18:54:03 -0400 (Wed, 24 May 2006) | 2 lines

   M /gnucash/trunk/lib/libqof/qof/gnc-date.c

   Consistently pad date formats with zeros instead of spaces.

r14170 | chris | 2006-05-23 23:55:35 -0400 (Tue, 23 May 2006) | 2 lines

   M /gnucash/branches/misc-backend/src/backend/postgres/Makefile.am
   M /gnucash/branches/misc-backend/src/backend/postgres/PostgresBackend.c
   M /gnucash/branches/misc-backend/src/engine/Account.c
   M /gnucash/branches/misc-backend/src/engine/gnc-commodity.h

   Trivial comments/cleanups.

r14169 | chris | 2006-05-23 23:53:52 -0400 (Tue, 23 May 2006) | 2 lines
